<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:gravity="center_vertical"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/playlist_cover_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/purple_gradient"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/playlist_cover" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_recommendation_playlist"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/playlist_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_a_starlight_11_b_n_nh_c"
            android:textColor="@color/gray"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>