<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragment.SearchSongsBottomSheetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_m_v_th_m_b_i_h_t"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/bottomSheetSearchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nh_p_t_n_b_i_h_t_ho_c_ngh_s"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:background="@drawable/edittext_search_background"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="#B3B3B3"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottomSheetSongsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_song_search" />
    <Button
    android:id="@+id/bottomSheetConfirmButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/x_c_nh_n"
    android:background="@drawable/btn_primary"
    android:textColor="@android:color/white"/>

</LinearLayout>